# fin-analyser

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run.sh
.streamlit/: config.toml
app/: app.py
notebook/: Inference.ipynb  test.ipynb  train.ipynb
src/: data_preprocess.py  display.py  llm.py  ocr.py  test.py  train.py
tests/: test_easyocr.py  test_extractor.py
